Hair displays as Emitter #38476

Closed
opened 2014-02-04 10:17:25 +01:00 by Peter Abraham · 10 comments

System Information
Ubuntu Studio LTS

6a2c467)
Worked: (optional)

Short description of error
If all the tweaks for setting up hair with vertex groups is done in Edit Mode then tabbing into Object Mode results in Emitters being displayed
Exact steps for others to reproduce the error
Tab into Edit Mode and then select Face Select. Select the top face and put that into a Vertex Group using the default name.
Then still in Edit Mode select the Particle tab and change the type to hair. Then go down to Vertex Groups and click the density box. Select the previously created Vertex group.
When you Tab back into Object Mode Emitters are displayed instead.
Unfortunately I don't know which graphics card I have, Hair_Bug.blend

**System Information** Ubuntu Studio LTS 6a2c467) Worked: (optional) **Short description of error** If all the tweaks for setting up hair with vertex groups is done in Edit Mode then tabbing into Object Mode results in Emitters being displayed **Exact steps for others to reproduce the error** Tab into Edit Mode and then select Face Select. Select the top face and put that into a Vertex Group using the default name. Then still in Edit Mode select the Particle tab and change the type to hair. Then go down to Vertex Groups and click the density box. Select the previously created Vertex group. When you Tab back into Object Mode Emitters are displayed instead. Unfortunately I don't know which graphics card I have, [Hair_Bug.blend](https://archive.blender.org/developer/F75945/Hair_Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @peter-frumon

Added subscriber: @peter-frumon

Added subscriber: @brecht

Added subscriber: @brecht

I couldn't redo the problem. I can see that in the attached .blend file the render type in the Render panel is not set to one of the 4 valid None/Path/Object/Group values, but I can't get it into that state in a new file. So if I understand right these are the steps:

  • In object mode, with default cube selected, add a particle system.
  • Tab into edit mode and use face select
  • Select the top face, create a vertex group and assign the face to the new vertex group.
  • Change the particle type to hair
  • Assign the vertex group as density
  • Tab back into object mode.

Which exact Blender version are you using?

The graphics card should not influence this particular bug so it doesn't matter here.

I couldn't redo the problem. I can see that in the attached .blend file the render type in the Render panel is not set to one of the 4 valid None/Path/Object/Group values, but I can't get it into that state in a new file. So if I understand right these are the steps: * In object mode, with default cube selected, add a particle system. * Tab into edit mode and use face select * Select the top face, create a vertex group and assign the face to the new vertex group. * Change the particle type to hair * Assign the vertex group as density * Tab back into object mode. Which exact Blender version are you using? The graphics card should not influence this particular bug so it doesn't matter here.
Author

First a minor correction regarding the steps. I added the particle system while in Edit Mode.

I managed to get the emitter problem to go away by selecting Path as the render type but now it ignores the vertex group created and puts the hair all over.

First a minor correction regarding the steps. I added the particle system while in Edit Mode. I managed to get the emitter problem to go away by selecting Path as the render type but now it ignores the vertex group created and puts the hair all over.

This issue was referenced by blender/blender-addons-contrib@e9fda259da

This issue was referenced by blender/blender-addons-contrib@e9fda259dac3d95018bc9378e2f8f3b10a8c46c4

This issue was referenced by e9fda259da

This issue was referenced by e9fda259dac3d95018bc9378e2f8f3b10a8c46c4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e9fda259da.

Closed by commit e9fda259da.

Fixed the draw type now.

The vertex groups works correct as far as I can tell. Note that this is a vertex group, not a face group, which means that the distribution is similar to what you see in weight paint mode. The top face will have most hairs, the faces on the side will have about half and the bottom face will have none.

Fixed the draw type now. The vertex groups works correct as far as I can tell. Note that this is a vertex group, not a face group, which means that the distribution is similar to what you see in weight paint mode. The top face will have most hairs, the faces on the side will have about half and the bottom face will have none.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38476
No description provided.