Fix T38476: incorrect hair draw type after editing particle system in edit mode.